@@ -2,6 +2,8 @@ xx Jun 2006: 0.2.14 Miek <miek@miek.nl>
 
    * Added user/ directory for user contributed scripts:
      added gzip.pl and mirror.pl both from Mark J Hewitt
+     These are up to 50 times faster than the shell scripts!
+   * Don't re-check directories for changed files sizes
 
 26 May 2006: 0.2.13 Miek <miek@miek.nl>
    -- BACKWARD INCOMPATIBLE CHANGES --
